--- a/productos.html
+++ b/productos.html
@@ -27,7 +27,7 @@
     </header>
 </body>
 <section>
-    <h3> ¡conoce toda nuestra variedad en venta de productos!</h3>
+    <h3> ¡Conoce toda nuestra variedad en venta de productos!</h3>
 </section>
 <main>
     <div>
